fixed wrap on text over images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,14 +152,14 @@ form {
     justify-content: space-between;
 }
 
-.flex-container-text {
-    flex-wrap: wrap;
+.flex-container-text-lower, .flex-container-text-upper{
+    flex-wrap: nowrap;
     position: absolute;
     z-index: 1;
     display: flex;
 }
 
-.textbox {
+.textbox-upper {
     color: white !important;
     background-color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -167,4 +167,14 @@ form {
     width: 280px;
     padding: 18px 0px 18px 0px;
     margin: 124px 34px 37px 0px;
+}
+
+.textbox-lower {
+    color: white !important;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    width: 280px;
+    padding: 18px 0px 18px 0px;
+    margin: 340px 34px 0px 0px;
 }
